--- a/analysis/_site.yml
+++ b/analysis/_site.yml
@@ -7,8 +7,12 @@ navbar:
       href: index.html
     - text: "About"
       href: about.html
-    - text: "Analysis"
-      href: Analysis.html
+    - text: "DataIntegration"
+      href: DataIntegration.html
+    - text: "Dimension Reduction & Clustering"
+      href: DimensionReduction_Clustering.html
+    - text: "DE Between IT & PT"
+      href: DE_L5_IT-PT.html
   right:
     - icon: fa-github
     - href: https://github.com/yasinkaymaz/Harvard-NissenLab
